--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <meta name="Description" content="Onenizam" />
   <meta name="Keyword" content="Onenizam" />
   <meta name="author" content="Onenizam" />
+  <link rel="canonical" href="https://onenizam.com/">
 
 
 
